# ros2_webrtc_bridge

./: package.xml  setup.cfg  setup.py
ros2_webRTC_bridge/: __init__.py  client_main.py  host_main.py
ros2_webRTC_bridge/bridge/: __init__.py  ros_webrtc_bridge.py  webrtc_manager.py
ros2_webRTC_bridge/config/: __init__.py  topic_config.py
ros2_webRTC_bridge/handler/: message_handler.py
ros2_webrtc_bridge/: client_main.py  host_main.py
ros2_webrtc_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ros2_webrtc_bridge/bridge/: ros_webrtc_bridge.py
ros2_webrtc_bridge/config/: topic_config.py
ros2_webrtc_bridge/handler/: __init__.py  message_handler.py
test/: compressed.py  img_comp.py
